# poolalloc

./: CMakeLists.txt  LICENSE.TXT  Makefile  Makefile.common  Makefile.common.in  Makefile.config.in  ModuleInfo.txt  README  configure
Regressions/: 2006-02-13.ArrayOfObjects.ll  2006-02-23.memcpy.ll  2006-03-04.undefArg.ll  2006-03-05.vaargCall.ll  2006-04-13.MixedAllocaGlobals.ll  2008-09-29.calls.c  2008-09-30.john.ll  2008-10-31.missingECs.ll  2009-08-05.packed.ll
autoconf/: AutoRegen.sh  aclocal.m4  configure.ac
docs/dsa-manual/: Makefile
dsa-manual/: manual.tex
include/: LinkDSA.h  LinkPA.h
include/assistDS/: ArgCast.h  DSNodeEquivs.h  Devirt.h  FuncSimplify.h  FuncSpec.h  GEPExprArgs.h  IndCloner.h  Int2PtrCmp.h  LoadArgs.h  MergeGEP.h  SimplifyExtractValue.h  SimplifyGEP.h  SimplifyInsertValue.h  SimplifyLoad.h  StructReturnToPointer.h  TypeAnalysis.h  TypeChecks.h  TypeChecksCmpOpt.h  TypeChecksOpt.h  VarArgsFunc.h
include/dsa/: AddressTakenAnalysis.h  AllocatorIdentification.h  CStdLib.h  CallTargets.h  DSCallGraph.h  DSGraph.h  DSGraphTraits.h  DSNode.h  DSSupport.h  DataStructure.h  TypeSafety.h  keyiterator.h  svset.h
include/poolalloc/: Heuristic.h  MMAPSupport.h  PoolAllocate.h  RunTimeAssociate.h  RuntimeChecks.h
include/poolalloc_runtime/: PoolAllocator.h  test.ex
include/rPA/: PoolAllocate.h
include/rdsa/: CallTargets.h  DSFlags.h  DSGraph.h  DSGraphTraits.h  DSNode.h  DSSupport.h  DataStructure.h
lib/: Makefile
lib/AssistDS/: AllocatorIdentification.cpp  ArgCast.cpp  ArgSimplify.cpp  CMakeLists.txt  DSNodeEquivs.cpp  Devirt.cpp  (+24 more)
lib/PoolAllocate/: AccessTrace.cpp  AllHeapNodesHeuristic.cpp  AllNodesHeuristic.cpp  CMakeLists.txt  EntryPointAnalysis.cpp  EntryPointAnalysis.h  Heuristic.cpp  Heuristic.h  Makefile  PAMultipleGlobalPool.cpp  PASimple.cpp  PointerCompress.cpp  PoolAllocate.cpp  PoolAllocate.h  PoolOptimize.cpp  RunTimeAssociate.cpp  TransformFunctionBody.cpp
runtime/: CMakeLists.txt  Makefile  README.txt
runtime/FL2Allocator/: CMakeLists.txt  Makefile  PoolAllocator.cpp  PoolAllocator.h
test/: CMakeLists.txt  Makefile  TEST.FL2.Makefile  TEST.FL2.report  TEST.calltargets.Makefile  TEST.calltargets.report  TEST.cputrack.Makefile  TEST.cputrack.report  TEST.dsaa.Makefile  TEST.dsaa.report  TEST.dsgraph.Makefile  TEST.dsgraph.report  TEST.optzn.Makefile  TEST.optzn.report  TEST.p4perf.Makefile  TEST.p4perf.report  TEST.pacompiletime.Makefile  TEST.pacompiletime.report  TEST.pavtl.Makefile  TEST.pavtl.report  TEST.perf.Makefile  TEST.perf.report  TEST.poolalloc.Makefile  TEST.poolalloc.report  TEST.ptrcomp.Makefile  TEST.ptrcomp.report  TEST.strace.Makefile  TEST.types.Makefile  TEST.types.report  lit.cfg  lit.site.cfg.in
test/dsa/callgraph/: addrtaken_caller.ll  addrtaken_main.ll  calltarget_basic.ll  calltargets_typemismatch.ll  calltargets_typemismatch1.ll  calltargets_variadic.ll  chain.ll  class.ll  decode.ll  dg.exp  dstest_anynotall.ll  externfuncs.ll  fptr.ll  indirect_resolve_chain.ll  inheritance1.ll  inheritance2.ll  inheritance3.ll  loop1.c  loop1.ll  loop2.c  loop2.ll  merge.ll  pr7799.ll  scc.ll  scc1.ll  scc3.c  scc3a.c  scc3b.c  table_dispatch.ll  table_dispatch1.ll  test1.ll  testIncomplete.ll  varargs.ll
test/dsa/equivs/: no-callees.ll  undef-null-calls.ll
test/dsa/local/: arrayPointers.ll  arrayPointers1.ll  arrayPointers2.ll  arrayPointers3.ll  array_in_struct.ll  array_of_struct.ll  arrays.c  arrays.ll  arrays1.c  arrays1.ll  arrays2.c  arrays2.ll  arrays3.c  arrays3.ll  arrays4.c  arrays4.ll  bitfields1.bc  bitfields1.c  bitfields1.ll  bitfields2.c  bitfields2.ll  bitfields3.c  bitfields3.ll  extern.ll  extern3.ll  flags.c  flags.ll  malloc.ll  memcpy.ll  multidimarray.ll  ptr.c  ptr.ll  ptr1.c  ptr1.ll  ptr2.c  ptr2.ll  struct.c  struct.ll  struct1.c  struct1.ll  (+9 more)
test/dsa/regression/: 2010-07-07.UndefArg.ll  2010-07-08.FPDeclaration.c  2010-07-09-vastartUndef.ll  2010-07-12-SCCLeader.ll  2010-07-16.CBU_MissingGraph.ll  2010-07-16.MissingIndirectCallee.ll  2010-07-16.SimpleLoop.ll  2010-08-17-VarArgSize.ll  2010-08-19-SimpleCallGraph.ll  2010-08-23-InlineCallersSegfault.ll  2011-03-17-CBUAssert.ll  2012-04-29.GlobalInitCollapse.ll  2012-04-29.SQLiteBUInfiniteRecursion.ll  2012-04-29.StructOOBIndex.ll  2012-05-05.GlobalCtorsDecl.ll  2012-05-05.GlobalCtorsSCC.ll  2012-05-05.PtrToIntInfiniteLoop.ll  2012-09-25.RCForwarding.ll  2012-09-27.ConstantAggregate.ll  2012-11-19.ExternFuncSummaries.ll  2012-11-19.MultipleVAStartAlias.ll  2012-11-20.TDUnresolvedIncomplete.ll  2014-05-06.PR19175-CollapseVA.ll
test/dsa/td/: ExternFuncNodeTest1.ll  ExternFuncNodeTest2.ll  ExternFuncNodeTest3.ll  basic-global.ll  call.c  call.ll  call1.c  call1.ll  call2.c  call2.ll  chain.ll  checkIncomplete.ll  checkIncomplete1.ll  extern2.ll  extern3.ll  extern_global.ll  fptr.ll  mergeArgs.ll  mergeArgs1.ll  params.c  params.ll  params1.c  params1.ll  params2.ll  recur.c  recur.ll  recur1.c  recur1.ll  recur2.c  recur2.ll  recur3.c  scc-flags.ll  scc-global.ll  testcase.c  testcase.ll
test/dsa/types/: array2struct.ll  mrv.ll  mrv1.ll  union.c  union.ll  union1.c  union1.ll  union2.c  union2.ll  union3.c  union3.ll  union4.c  union4.ll  union_arrays.c  union_arrays.ll
test/dsa/var_arg/: basic.c  basic.ll  basic_32.ll  basic_64.ll  context.c  context_32.ll  context_64.ll  extern.c  multiple_callee.c  multiple_callee_nomodref.c  print.c  print.ll  va_copy.c  va_copy_32.ll  va_copy_64.ll
test/pa/clone/: AttrTest.ll  Incomplete.ll  computeNodeMappingFail.ll
test/pa/regression/: 2010-07-09-ArgAttrMismatch.ll  2010-08-17-InvalidIterator.ll  2010-09-14-Fptr.c  2010-09-14-Fptr_helper.c
test/type_checks/correct/: basic.c  basic_repeat.c  libclamav_snprintf.c  vprintf.c  vprintf1.c
test/type_checks/error/: IntUnion.c  alloc.c  indirect_simple.c  libclamav_snprintf1.c  misalign.c  misalign1.c  testEndian.c
test/type_checks/regression/: nomain.ll  simple_varargs.ll
test/var_arg/: basic.c  multiple_callee.c  multiple_callee_nomodref.c  va_copy.c
tools/: CMakeLists.txt  Makefile
utils/: NightlyCronTab  NightlyTest.sh
(+94 files in other folders)
